--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -5,10 +5,7 @@
     <div class="wrapper">
       <%- include('partials/navbar') %>
       <main>
-        <nav>
-          <a href="/"><< Go Back</a>
-        </nav>
-        <h1>Your Posts</h1>
+        <h1>Posts</h1>
         <% if (posts.length === 0) { %>
         <p>You have no posts</p>
 
