--- a/public/styles.css
+++ b/public/styles.css
@@ -20,9 +20,8 @@ label {
   display: block;
 }
 
-nav{
-    background-color: rgb(230, 211, 166);
-    padding: 1rem;
+nav {
+  padding: 0.8rem;
 }
 
 nav > ul {
@@ -32,11 +31,18 @@ nav > ul {
   gap: 2rem;
 }
 
-nav > ul > li:first-of-type{
-    font-size: 2rem;
+nav a {
+  text-decoration: none;
+  padding: 0.2rem 0.4rem;
+  transition: 0.2s ease;
 }
 
-nav > ul > li:first-of-type:hover > a{
+nav a:hover {
+  color: white;
+  background-color: black;
+}
+
+nav > ul > li:first-of-type:hover > a {
   text-decoration: none;
 }
 
@@ -54,23 +60,61 @@ p {
   gap: 1rem;
 }
 
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.wrapper{
-    max-width: 70ch;
-    margin: 0 auto;
-    padding: 0;
-    background-color: rgb(246, 246, 246);
-    color: rgb(21, 21, 21);
+.wrapper {
+  max-width: 70ch;
+  margin: 0 auto;
+  padding: 0;
 }
 
-main{
-    padding: 1rem 2rem;
+main {
+  padding: 1rem 2rem;
 }
 
-a:hover{
-  text-decoration:underline;
+a {
+  color: black;
+  text-decoration: underline;
+}
+
+.go-back {
+  display: inline-flex;
+  padding: 0.2rem 0.4rem;
+  gap: 0.4rem;
+  align-items: center;
+  justify-items: flex-start;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  text-decoration: none;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+form input, textarea {
+  padding: 0.4rem;
+  border: 1px solid black;
+  font-size: 0.8rem;
+}
+
+form input[type="submit"] {
+  padding: 1.2rem;
+  border: 1px solid black;
+  font-size: 1rem;
+  background-color: white;
+  transition: 0.2s ease;
+}
+
+form input[type="submit"]:hover {
+  padding: 1.2rem;
+  border: 1px solid black;
+  font-size: 1rem;
+  background-color: black;
+  color: white;
 }
