--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -5,25 +5,17 @@
     <div class="wrapper">
       <%- include('partials/navbar') %>
       <main>
-        <nav>
-          <a href="/"><< Go Back</a>
-        </nav>
-        <h1>Create a new post</h1>
+        <h1>Create post</h1>
         <form
           method="post"
           action="/save-post"
           enctype="application/x-www-form-urlencoded"
         >
-          <label for="slug">Slug</label>
-          <input type="text" required name="slug" />
-          <label for="title">Title</label>
-          <input type="text" required name="title" />
-          <label for="author">Author</label>
-          <input type="text" required name="author" />
-          <label for="date">Date</label>
-          <input type="date" required name="date" />
-          <label for="content">Content (Markdown)</label>
-          <textarea required rows="50" cols="60" name="content"></textarea>
+          <input type="text" required name="slug" placeholder="Slug" />
+          <input type="text" required name="title" placeholder="Title" />
+          <input type="text" required name="author" placeholder="Author"/>
+          <input type="date" required name="date" placeholder="Date" />
+          <textarea required rows="50" cols="60" name="content" placeholder="Start writing your post with Markdown"></textarea>
           <input type="submit" value="Save" />
         </form>
       </main>
