--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li>
-      <a href="/">🐾</a>
+      <a href="/">Home</a>
     </li>
     <li>
       <a href="/posts">View All Posts</a>
