--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,10 @@
       <%- include('partials/navbar') %>
       <main>
         <hgroup>
-          <h1>ejs-blog</h1>
+          <div>
+            <p style="font-size: 0.6rem">A Project by Yash Burshe</p>
+            <h1>ejs-blog</h1>
+          </div>
           <p>A server side rendering blogging engine</p>
         </hgroup>
         <section>
