--- a/public/styles.css
+++ b/public/styles.css
@@ -80,6 +80,18 @@ a {
   text-decoration: underline;
 }
 
+hgroup > div {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: start;
+  gap: 0rem;
+}
+
+hgroup > div > p, hgroup > div > h1{
+  margin: 0;
+  padding: 0;
+}
+
 .go-back {
   display: inline-flex;
   padding: 0.2rem 0.4rem;
