Update project name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,23 +7,15 @@
       <main>
         <hgroup>
           <div>
-            <p style="font-size: 0.6rem">A Project by Yash Burshe</p>
-            <h1>ejs-blog</h1>
+            <h1>Mdpress</h1>
           </div>
           <p>A server side rendering blogging engine</p>
         </hgroup>
         <section>
-          <h2>What is ejs-blog?</h2>
-          <p>ejs-blog is a server side rendering blog powered by Node.js.</p>
-        </section>
-        <section>
-          <h2>Upcoming Features</h2>
-          <ol>
-            <li>Update a post</li>
-            <li>Author categorization system</li>
-            <li>Settings panel to abstract editing JS files</li>
-            <li>Support to store and use local images</li>
-          </ol>
+          <h2>What is Mdpress?</h2>
+          <p>
+            Mdpress is a server side rendering blog powered by EJS and Markdown.
+          </p>
         </section>
       </main>
     </div>
