--- a/public/styles.css
+++ b/public/styles.css
@@ -82,12 +82,12 @@ a {
 
 hgroup > div {
   display: flex;
-  flex-direction: row-reverse;
   justify-content: start;
-  gap: 0rem;
+  gap: 0.3rem;
 }
 
-hgroup > div > p, hgroup > div > h1{
+hgroup > div > p,
+hgroup > div > h1 {
   margin: 0;
   padding: 0;
 }
@@ -109,7 +109,8 @@ form {
   gap: 1rem;
 }
 
-form input, textarea {
+form input,
+textarea {
   padding: 0.4rem;
   border: 1px solid black;
   font-size: 0.8rem;
